/* $Id: ChangeLog,v 1.2725 2004-04-20 10:13:15 sandervl Exp $ */

 2004-04-19: knut st. osmundsen <bird-changelog@innotek    >
    - USER32:   o Changed some critical sections which weren't initiated to
                  VMutex to get automatic initialization.
    - LIBWRAP:  o DosVerifyPidTid.

 2004-04-15: Sander van Leeuwen <sandervl@innotek   >
    - USER32:   o SetWindowPos: do not check for position and size redundancy

 2004-04-08: knut st. osmundsen <bird-changelog@innotek    >
    - INCLUDE:  o Merged wingdi.h from current WINE CVS.
                o Added prototypes for new WGSS APIs.
    - GDI32:    o Corrected a few problems due to wingdi.h merge.
                o Corrected GetDIBits query mode.
    - USER32:   o Rewrote clipboard code completely.

 2004-04-07: Sander van Leeuwen <sandervl@innotek   >
    - KERNEL32: o Profile: flush ini file after write actions

 2004-04-06: Sander van Leeuwen <sandervl@innotek   >
    - WINMM:    o Automatically disable audio support when any Crystal driver
                  is detected
    - KERNEL32: o Changed check for number of memory map views

 2004-04-02: Sander van Leeuwen <sandervl@innotek   >
    - KERNEL32: o ReadFile/WriteFile: wrong page calculation for memory maps

 2004-03-25: Sander van Leeuwen <sandervl@innotek   >
    - GDI32:    o LineTo: special case in toWin32LineEnd when inside a path
                          definition

 2004-03-24: Sander van Leeuwen <sandervl@innotek   >
    - GDI32:    o CreateDIBitmap: added workaround for DIB_PAL_COLORS mode

 2004-03-24: Vitali Pelenyov <sunlover@innotek   >
    - KERNEL32: o GetVolumeInformation: check for file system buffer size

 2004-03-23: Sander van Leeuwen <sandervl@innotek   >
    - USER32:   o MapVirtualKeyA: must convert return value from PM to windows
                  scancodes
                o OSLibWinTranslateMessage: removed some strange numpad related
                  hacks that caused problems for VK_DECIMAL processing
